syntax="proto3";
package userpb;
option go_package = "./proto/user";

import "google/api/annotations.proto";

message user {
    string userId = 1;
    string userName = 2;
    string userEmail = 3;
}
message data{
    string token = 1;
    user user = 2;
}
message AddUserRequest {
    string userName = 1;
    string userEmail = 2;
    string userPhone = 3;
    string userPassword = 4;
}
message AddUserResponse {
    string message = 1;
    string error = 2;
    int64 statusCode = 3;
    data data = 4;
}
message AuthenticateUserRequest {
    string userEmail = 1;
    string userPassword = 2;
}
message AuthenticateUserResponse {
    string message = 1;
    string error = 2;
    int64 statusCode = 3;
    data data = 4;
}
service UserService {
    rpc AddUser(AddUserRequest) returns (AddUserResponse){
        option (google.api.http) = {
            post: "/api/users/register"
            body: "*"
        };
    };
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse){
        option (google.api.http) = {
            post: "/api/users/login"
            body: "*"
        };
    };
}